# rxtx

./: .gitignore  LICENSE  example.py  pyproject.toml  readme.md  requirements.txt
src/: rxtx.py
tests/: test_rxtx.py
